// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeNullish fail when given null 1`] = `
"[2mexpect([22m[31mrecieved[39m[2m).not.toBeNullish()[22m

Expected value to not be nullish, recieved:    [31mnull[39m"
`;

exports[`.not.toBeNullish fail when given undefined 1`] = `
"[2mexpect([22m[31mrecieved[39m[2m).not.toBeNullish()[22m

Expected value to not be nullish, recieved:    [31mundefined[39m"
`;

exports[`.toBeNullish fail when given  1`] = `
"[2mexpect([22m[31mrecieved[39m[2m).toBeNullish()[22m

Expected value to be nullish, recieved:    [31m\\"\\"[39m"
`;

exports[`.toBeNullish fail when given [] 1`] = `
"[2mexpect([22m[31mrecieved[39m[2m).toBeNullish()[22m

Expected value to be nullish, recieved:    [31m[][39m"
`;

exports[`.toBeNullish fail when given {} 1`] = `
"[2mexpect([22m[31mrecieved[39m[2m).toBeNullish()[22m

Expected value to be nullish, recieved:    [31m{}[39m"
`;

exports[`.toBeNullish fail when given 0 1`] = `
"[2mexpect([22m[31mrecieved[39m[2m).toBeNullish()[22m

Expected value to be nullish, recieved:    [31m0[39m"
`;

exports[`.toBeNullish fail when given 1 1`] = `
"[2mexpect([22m[31mrecieved[39m[2m).toBeNullish()[22m

Expected value to be nullish, recieved:    [31m1[39m"
`;

exports[`.toBeNullish fail when given NaN 1`] = `
"[2mexpect([22m[31mrecieved[39m[2m).toBeNullish()[22m

Expected value to be nullish, recieved:    [31mNaN[39m"
`;

exports[`.toBeNullish fail when given false 1`] = `
"[2mexpect([22m[31mrecieved[39m[2m).toBeNullish()[22m

Expected value to be nullish, recieved:    [31mfalse[39m"
`;
